# conllu

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  index.yml  publish-to-pypi.yml
conllu/: __init__.py  compat.py  models.py  parser.py  serializer.py  tree_helpers.py
tests/: fixtures.py  helpers.py  test_helpers.py  test_init.py  test_integration.py  test_models.py  test_parser.py  test_readme.py  test_style.py
tests/fixtures/: data.py  data1.py  data1_flat.py  data1_tree.py  data_flat.py  data_tree.py
