[flake8]
ignore = E302,W503
max-line-length = 119

[nosetests]
logging-level = ERROR

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE

[coverage:report]
fail_under = 100
exclude_lines =
	pragma: no cover
	def __repr__
	if T\.TYPE_CHECKING
	TT\.Protocol

[coverage:run]
branch = True
source = conllu
omit =
	conllu/__init__.py

[isort]
line_length = 119
multi_line_output = 5
include_trailing_comma = True
known_first_party =
	conllu
	tests
